Admin, Faculty and students Profile completed in V0

--- a/Student/profile.html
+++ b/Student/profile.html
@@ -29,12 +29,16 @@
  <table border="1">
 <tr>
   <td><b>Name</b></td>
-  <td><b>Year</b></td>
+  <td>Sahithi</td>
+  
 </tr>
-<tr><td><i>Sahithi</i></td>
-  <td>Second Year</td>
+<tr><td><b>Email</b></td>
+  <td>sahithi@gmail.com</td>
 </tr>
-
+<tr>
+  <td><b>Roll no</b>.</td>
+  <td>2400030610</td>
+</tr>
  </table>
 
 </body>
