After editing profile pages with css

--- a/Admin/admin_index.html
+++ b/Admin/admin_index.html
@@ -4,23 +4,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Dashboard</title>
+  <link rel="stylesheet" href="admin_index.css">
 </head>
 <body>
-  <center><h1>Admin Dashboard</h1></center>
-<center><table border="1">
-<tr>
-  <td><a href="http://127.0.0.1:5500/Admin/course_mgmt.html"><img src="https://shorturl.at/Bzkv0" height="150" width="150"></a></td>
-  <td><a href="http://127.0.0.1:5500/Admin/user_mgmt.html"><img src="https://shorturl.at/6rcrj" height="150" width="150" alt=""></a></td>
-  <td><a href="http://127.0.0.1:5500/Admin/c_m_f.html"><img src="https://shorturl.at/QW21O" height="150"  width="150"></a></td>
-</tr>
-<tr>
-  <td><a href="c_m_stu.html"><img src="https://shorturl.at/QMLR7"  height="150" width="150"></a></td>
-  <td><a href="results.html"><img src="https://shorturl.at/jGt1z"  height="150" width="150"></a></td>
-  <td><a href="report.html"><img src="https://shorturl.at/b1MaH" height="150" width="150"></a></td>
-</tr>
-<td><a href="profile.html"><img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png"  height="150" width="150"></a></td>
-
-</table>
+  <center><h1 class="heading">Admin Dashboard</h1></center>
+  <div class="section1">
+<div class="parent1">
+  <a href="http://127.0.0.1:5500/Admin/course_mgmt.html"><img src="https://shorturl.at/Bzkv0" height="150" width="150"> <p>Course mgmt</p></a>
+  </div>
+  <div class="parent2">
+  <a href="http://127.0.0.1:5500/Admin/user_mgmt.html"><img src="https://shorturl.at/6rcrj" height="150" width="150" alt=""><p>User mgmt</p></a>
+  </div>
+  <div class="parent3">
+  <a href="http://127.0.0.1:5500/Admin/c_m_f.html"><img src="https://shorturl.at/QW21O" height="150"  width="150"><p>c_m_f</p></a>
+</div>
+<div class="parent4">
+  <a href="c_m_stu.html"><img src="https://shorturl.at/QMLR7"  height="150" width="150"><p>c_m_student</p></a>
+ </div>
+</div>
+<div class="section2">
+ <div class="parent5">
+  <a href="results.html"><img src="https://shorturl.at/jGt1z"  height="150" width="150"><p>Results</p></a>
+  </div>
+  <div class="parent6">
+  <a href="report.html"><img src="https://shorturl.at/b1MaH" height="150" width="150"><p>Report</p></a>
+  </div>
+  <div class="parent7">
+<a href="profile.html"><img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png"  height="150" width="150"><p>Profile</p></a>
+</div>
+ </div>
+ 
 </center>
 </body>
 </html>
