--- a/Faculty/faculty_index.html
+++ b/Faculty/faculty_index.html
@@ -4,24 +4,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Faculty Dashboard</title>
+  <link rel="stylesheet" href="faculty_index.css">
 </head>
 <body>
   <center>
-  <h1>Faculty Dashboard</h1>
+  <h1 class="heading">Faculty Dashboard</h1>
   </center>
   <center>
-  <table border="1">
-<tr>
-  <td><a href="profile.html"><img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" height="150" width="150"></a></td>
-  <td><a href="view_courses.html"><img src="https://shorturl.at/S4MMH" height="150" width="150"alt=""></a></td>
-  <td><a href="view_report.html"><img src="https://shorturl.at/Dh4ug" height="150" width="150"alt=""></a></td>
-</tr>
-<tr>
-  <td><a href="view_result.html"><img src="https://shorturl.at/kQQJY" height="150" width="150"alt=""></a></td>
-  <td><a href="view_students.html"><img src="https://shorturl.at/1eFCb" height="150" width="150"alt=""></a></td>
-  <td><a href="post_marks.html"><img src="https://shorturl.at/whJbI" height="150" width="150" alt=""></a></td>
-</tr>
-  </table>
+  
+<div class="section1">
+  <div class="parent1">
+  <a href="profile.html"><img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" height="150" width="150"> <p>Profile</p></a>
+ </div>
+ <div class="parent2">
+    <a href="view_courses.html"><img src="https://shorturl.at/S4MMH" height="150" width="150"alt=""><p>Courses</p></a>
+ </div>
+<div class="parent3">
+    <a href="view_report.html"><img src="https://shorturl.at/Dh4ug" height="150" width="150"alt=""><p>Report</p></a>
+</div>
+</div>
+<div class="section2">
+  <div class="parent4">
+  <a href="view_result.html"><img src="https://shorturl.at/kQQJY" height="150" width="150"alt=""><p>Result</p></a>
+  </div>
+  <div class="parent5">
+  <a href="view_students.html"><img src="https://shorturl.at/1eFCb" height="150" width="150"alt=""><p>View Students</p></a>
+  </div>
+  <div class="parent6">
+  <a href="post_marks.html"><img src="https://shorturl.at/whJbI" height="150" width="150" alt=""><p>Post Marks</p></a>
+</div>
+</div>
   </center>
 </body>
 </html>
