--- a/Student/student_index.html
+++ b/Student/student_index.html
@@ -4,23 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Student Dashboard</title>
+  <link rel="stylesheet" href="student_index.css">
 </head>
 <body>
   <center>
-  <h1>Student Dashboard</h1>
+  <h1 class="heading">Student Dashboard</h1>
   </center>
   <center>
-  <table border="1">
-<tr>
-  <td><a href="profile.html"><img src="https://shorturl.at/STGCB" height="150" width="150"></a></td>
-  <td><a href="view_courses.html"><img src="https://shorturl.at/WRDCw" height="150" width="150" alt=""></a></td>
-</tr>
-<tr>
-  <td><a href="view_report.html"><img src="https://shorturl.at/AdYCm" height="150" width="150" alt=""></a></td>
-  <td><a href="view_results.html"><img src="https://shorturl.at/yEKk4" height="150" width="150" alt=""></a></td>
-  
-</tr>
-  </table>
+  <div class="section1">
+<div class="parent1">
+ <a href="profile.html"><img src="https://shorturl.at/STGCB" height="150" width="150"><p>Profile</p></a>
+  </div>
+  <div class="parent2">
+ <a href="view_courses.html"><img src="https://shorturl.at/WRDCw" height="150" width="150" alt=""><p>View Courses</p></a>
+</div>
+  <div class="parent3">
+ <a href="view_report.html"><img src="https://shorturl.at/AdYCm" height="150" width="150" alt=""><p>View Report</p></a>
+  </div>
+  <div class="parent4">
+ <a href="view_results.html"><img src="https://shorturl.at/yEKk4" height="150" width="150" alt=""><p>View Results</p></a>
+  </div>
+</div>
   </center>
 </body>
 </html>
