--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Result Project HTML</title>
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
-  <center><h1>Result Analysis Dashboard</h1></center>
+  <center><h1 class="heading">Result Analysis Dashboard</h1></center>
   <center>
-  <table border="1">
-    <tr>
-      <td><a href="Admin/admin_index.html"><img src="https://shorturl.at/ASQp4" height = "150" width="150" ></a></td>
-      <td><a href="Faculty/faculty_index.html"><img src="https://shorturl.at/BxhiG" height="150" width="150"></a></td>
-      <td><a href="Student/student_index.html"><img src="https://shorturl.at/STGCB" height="150" width="150"></a></td>
-    </tr>
-  </table>
+    <div class="mainsection">
+    <div class="parent1">
+      <a href="Admin/admin_index.html"><img src="https://shorturl.at/ASQp4" height = "150" width="150" ><p>Admin</p></a>
+      </div>
+      <div class="parent2">
+     <a href="Faculty/faculty_index.html"><img src="https://shorturl.at/BxhiG" height="150" width="150"><p>Faculty</p></a>
+     </div>
+     <div class="parent3">
+      <a href="Student/student_index.html"><img src="https://shorturl.at/STGCB" height="150" width="150"><p>Student</p></a>
+  </div>
+  </div>
   </center>
 </body>
 </html>
