All pages are done with CSS and HTML

--- a/Admin/c_m_f.html
+++ b/Admin/c_m_f.html
@@ -1,12 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Course Mapped With Faculty</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Course Mapped with Faculty</title>
+<link rel="stylesheet" href="c_m_f.css">
 </head>
 <body>
-  <center><h1>Course Mapped With Faculty</h1></center>
-  
+
+<header>
+    <h1>Course Mapped with Faculty</h1>
+</header>
+
+<section class="container">
+    <h2>Select a Course:</h2>
+
+    <details>
+        <summary>Data Structures</summary>
+        <p><strong>Course Code:</strong> C101</p>
+        <p><strong>Faculty ID:</strong> F001</p>
+        <p><strong>Course Coordinator:</strong> Dr. Smith Johnson</p>
+    </details>
+
+    <details>
+        <summary>Database Management Systems</summary>
+        <p><strong>Course Code:</strong> C102</p>
+        <p><strong>Faculty ID:</strong> F002</p>
+        <p><strong>Course Coordinator:</strong> Prof. Alice Brown</p>
+    </details>
+
+    <details>
+        <summary>Operating Systems</summary>
+        <p><strong>Course Code:</strong> C103</p>
+        <p><strong>Faculty ID:</strong> F003</p>
+        <p><strong>Course Coordinator:</strong> Mr. David Wilson</p>
+    </details>
+
+    <details>
+        <summary>Java Programming</summary>
+        <p><strong>Course Code:</strong> C105</p>
+        <p><strong>Faculty ID:</strong> F005</p>
+        <p><strong>Course Coordinator:</strong> Mr. John Doe</p>
+    </details>
+
+    <details>
+        <summary>Design & Analysis of Algorithms</summary>
+        <p><strong>Course Code:</strong> C106</p>
+        <p><strong>Faculty ID:</strong> F006</p>
+        <p><strong>Course Coordinator:</strong> Dr. Sarah Thompson</p>
+    </details>
+
+    <details>
+        <summary>Artificial Intelligence & ML</summary>
+        <p><strong>Course Code:</strong> C107</p>
+        <p><strong>Faculty ID:</strong> F007</p>
+        <p><strong>Course Coordinator:</strong> Prof. Michael Green</p>
+    </details>
+
+    <details>
+        <summary>Frontend Development</summary>
+        <p><strong>Course Code:</strong> C108</p>
+        <p><strong>Faculty ID:</strong> F008</p>
+        <p><strong>Course Coordinator:</strong> Ms. Laura White</p>
+    </details>
+</section>
+
 </body>
 </html>
