--- a/Admin/c_m_stu.html
+++ b/Admin/c_m_stu.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Course Mapped With Student</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Course Mapped with Student</title>
+    <link rel="stylesheet" href="c_m_stu.css">
 </head>
 <body>
-  <center><h1>Course Mapped With Student</h1></center>
+    <div class="container">
+        <h1>Course Mapped with Students</h1>
+
+        <details>
+            <summary>Java</summary>
+            <ul>
+                <li>30610</li>
+                <li>30262</li>
+                <li>30619</li>
+                <li>30268</li>
+                <li>30612</li>
+                <li>30646</li>
+                <li>30789</li>
+            </ul>
+        </details>
+
+        <details>
+            <summary>DAA</summary>
+            <ul>
+                <li>30610</li>
+                <li>30262</li>
+                <li>30619</li>
+            </ul>
+        </details>
+
+        <details>
+            <summary>AI & ML</summary>
+            <ul>
+                <li>30268</li>
+                <li>30612</li>
+                <li>30789</li>
+            </ul>
+        </details>
+
+        <details>
+            <summary>Frontend</summary>
+            <ul>
+                <li>30646</li>
+                <li>30610</li>
+            </ul>
+        </details>
+    </div>
 </body>
 </html>
