--- a/Admin/course_mgmt.html
+++ b/Admin/course_mgmt.html
@@ -1,13 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Course management</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Course Management</title>
+    <link rel="stylesheet" href="course_mgmt.css">
 </head>
 <body>
-  <center>
-  <h1>Course Management</h1>
-  </center>
+
+    <header>
+        <h1>Course Management</h1>
+    </header>
+
+    <section class="course-container">
+        <div class="course-card">
+            <h2>Data Structures</h2>
+            <p><strong>Credits:</strong> 4</p>
+            <p><strong>Faculty:</strong> Dr. Smith Johnson</p>
+        </div>
+
+        <div class="course-card">
+            <h2>Database Management Systems</h2>
+            <p><strong>Credits:</strong> 3</p>
+            <p><strong>Faculty:</strong> Prof. Alice Brown</p>
+        </div>
+
+        <div class="course-card">
+            <h2>Operating Systems</h2>
+            <p><strong>Credits:</strong> 4</p>
+            <p><strong>Faculty:</strong> Mr. David Wilson</p>
+        </div>
+
+        <div class="course-card">
+            <h2>Computer Networks</h2>
+            <p><strong>Credits:</strong> 3</p>
+            <p><strong>Faculty:</strong> Dr. Emily Carter</p>
+        </div>
+
+        <div class="course-card">
+            <h2>Java Programming</h2>
+            <p><strong>Credits:</strong> 4</p>
+            <p><strong>Faculty:</strong> Mr. John Doe</p>
+        </div>
+
+        <div class="course-card">
+            <h2>Design & Analysis of Algorithms (DAA)</h2>
+            <p><strong>Credits:</strong> 4</p>
+            <p><strong>Faculty:</strong> Dr. Sarah Thompson</p>
+        </div>
+
+        <div class="course-card">
+            <h2>Artificial Intelligence & Machine Learning</h2>
+            <p><strong>Credits:</strong> 3</p>
+            <p><strong>Faculty:</strong> Prof. Michael Green</p>
+        </div>
+
+        <div class="course-card">
+            <h2>Frontend Development</h2>
+            <p><strong>Credits:</strong> 2</p>
+            <p><strong>Faculty:</strong> Ms. Laura White</p>
+        </div>
+    </section>
+
 </body>
 </html>
