--- a/Admin/profile.html
+++ b/Admin/profile.html
@@ -4,39 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Profile</title>
+  <link rel="stylesheet" href="profile.css">
 </head>
 <body>
   
-    <h1>Admin Profile Page</h1>
-  <table>
-    <tr>
-      <td><img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png"  height="157" width="157"></td>
-      <td><p>Welcome to admin profile page. <br>Here, you can see who the admin is and his details.</p></td>
-    </tr>
-    <tr><td>
-      <ul>
-        <li>Manage users</li>
-        <li>Post Announcements</li>
-        <li>View Logs</li>
-      </ul>
-      </td>
-    </tr>
-  </table>
-  <hr>
-  <h2>Admin Details</h2>
-  <table border="1" cellpadding="10">
+<h1>Admin Profile Page</h1>
+
+<!-- Profile Card -->
+<div class="profile-card">
+  <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="Admin" height="150" width="150">
+  <ul>
+    <li>Manage users</li>
+    <li>Post Announcements</li>
+    <li>View Logs</li>
+  </ul>
+</div>
+
+<hr>
+
+<h2>Admin Details</h2>
+<table border="1" cellpadding="10">
   <tr>
     <td><b>Name</b></td>
     <td><b>Email</b></td>
   </tr>
   <tr>
-    <td><i>
-      Sahithi
-    </i>
-
-    </td>
+    <td><i>Sahithi</i></td>
     <td><u>Sahithipasam@gmail.com</u></td>
   </tr>
-  </table>
+</table>
+
 </body>
 </html>
