--- a/Admin/report.html
+++ b/Admin/report.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Report Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Report Page</title>
+    <link rel="stylesheet" href="report.css">
 </head>
 <body>
-  <center>
-    <h1>Report Page</h1>
-  </center>
+    <header>
+        <h1>Student Performance Report</h1>
+    </header>
+
+    <section class="report-card">
+        <div class="card">
+            <h2>🏆 Top Performing Student</h2>
+            <p><strong>Name:</strong> Ananya Sharma</p>
+            <p><strong>ID:</strong> 30610</p>
+            <p><strong>Average Grade:</strong> 94%</p>
+        </div>
+
+        <div class="card">
+            <h2>📉 Lowest Performing Student</h2>
+            <p><strong>Name:</strong> Rohan Verma</p>
+            <p><strong>ID:</strong> 30619</p>
+            <p><strong>Average Grade:</strong> 56%</p>
+        </div>
+
+        <div class="card">
+            <h2>📊 Average Grade (All Courses)</h2>
+            <p><strong>Overall Average:</strong> 78%</p>
+        </div>
+    </section>
 </body>
 </html>
