--- a/Faculty/view_report.html
+++ b/Faculty/view_report.html
@@ -3,14 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Report</title>
+  <title>Reports</title>
+  <link rel="stylesheet" href="report.css">
 </head>
 <body>
-  <center><h2>Reports</h2>
+  <h2>Faculty Reports</h2>
 
-  </center>
-  <h2>Student Reports</h2>
-<p>Access comprehensive reports on student performance, attendance, and academic progress. Use the filters to view specific classes or semesters.</p>
+  <div class="report-container">
+    <div class="report-card">
+      <h3>Student Performance Report</h3>
+      <p>View and analyze student performance across all courses.</p>
+      <button>View Report</button>
+    </div>
 
+    <div class="report-card">
+      <h3>Course Statistics</h3>
+      <p>Get detailed statistics for course enrollments and grades.</p>
+      <button>View Report</button>
+    </div>
+
+    <div class="report-card">
+      <h3>Attendance Summary</h3>
+      <p>Review attendance percentages and records for students.</p>
+      <button>View Report</button>
+    </div>
+  </div>
 </body>
 </html>
