--- a/Faculty/view_result.html
+++ b/Faculty/view_result.html
@@ -3,16 +3,49 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Results</title>
+  <title>Faculty - Results</title>
+  <link rel="stylesheet" href="results.css">
 </head>
 <body>
-  <center>
-    <h1>
-      Results
-    </h1>
-  </center>
-  <h2>Exam Results</h2>
-<p>Check your latest examination results here. Enter your roll number or student ID to view your marks and grades.</p>
+
+  <div class="container">
+    <h2>Student Results</h2>
+
+    <table class="results-table">
+      <thead>
+        <tr>
+          <th>Roll No</th>
+          <th>Name</th>
+          <th>Course</th>
+          <th>Marks</th>
+          <th>Status</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>21CSE001</td>
+          <td>Aryan Kumar</td>
+          <td>Data Structures</td>
+          <td>88</td>
+          <td class="pass">Pass</td>
+        </tr>
+        <tr>
+          <td>21CSE002</td>
+          <td>Meera Singh</td>
+          <td>Database Systems</td>
+          <td>72</td>
+          <td class="pass">Pass</td>
+        </tr>
+        <tr>
+          <td>21CSE003</td>
+          <td>Rahul Sharma</td>
+          <td>Computer Networks</td>
+          <td>34</td>
+          <td class="fail">Fail</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
 </body>
 </html>
