--- a/Faculty/view_students.html
+++ b/Faculty/view_students.html
@@ -3,11 +3,53 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>View_Students</title>
+  <title>Student Information</title>
+  <link rel="stylesheet" href="student_info.css">
 </head>
 <body>
-  <center>
-    <h1>Student Information</h1>
-  </center>
+
+  <div class="container">
+    <h2>Student Information</h2>
+
+    <table>
+      <thead>
+        <tr>
+          <th>Student ID</th>
+          <th>Name</th>
+          <th>Email</th>
+          <th>Course</th>
+          <th>Year</th>
+          <th>Contact</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>ST101</td>
+          <td>Rohit Kumar</td>
+          <td>rohit.kumar@example.com</td>
+          <td>Computer Science</td>
+          <td>3rd</td>
+          <td>9876543210</td>
+        </tr>
+        <tr>
+          <td>ST102</td>
+          <td>Anjali Sharma</td>
+          <td>anjali.sharma@example.com</td>
+          <td>Information Technology</td>
+          <td>2nd</td>
+          <td>9876543211</td>
+        </tr>
+        <tr>
+          <td>ST103</td>
+          <td>Vikram Singh</td>
+          <td>vikram.singh@example.com</td>
+          <td>Electronics</td>
+          <td>4th</td>
+          <td>9876543212</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
 </body>
 </html>
