--- a/Student/view_courses.html
+++ b/Student/view_courses.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Courses</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>View Courses - Student</title>
+    <link rel="stylesheet" href="view_courses.css">
 </head>
 <body>
-  <center><h1>Available Courses</h1></center>
+    <div class="container">
+        <h1>Available Courses</h1>
+        <div class="course-list">
+            <div class="course-card">
+                <h2>Introduction to Programming</h2>
+                <p><strong>Instructor:</strong> Dr. John Smith</p>
+                <p><strong>Credits:</strong> 4</p>
+            </div>
+            <div class="course-card">
+                <h2>Data Structures</h2>
+                <p><strong>Instructor:</strong> Prof. Emily Clark</p>
+                <p><strong>Credits:</strong> 3</p>
+            </div>
+            <div class="course-card">
+                <h2>Database Management</h2>
+                <p><strong>Instructor:</strong> Dr. Alan Brown</p>
+                <p><strong>Credits:</strong> 3</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
