--- a/Student/view_report.html
+++ b/Student/view_report.html
@@ -1,13 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>REport</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Student View Report</title>
+    <link rel="stylesheet" href="view_report.css">
 </head>
 <body>
-  <center>
-    <h1>View Reports</h1>
-  </center>
+
+    <div class="container">
+        <h2>View Report</h2>
+
+        <div class="report-card">
+            <h3>Student Information</h3>
+            <p><strong>Name:</strong> John Doe</p>
+            <p><strong>Roll No:</strong> 12345</p>
+            <p><strong>Course:</strong> B.Tech - CSE</p>
+        </div>
+
+        <div class="report-card">
+            <h3>Marks Summary</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Subject</th>
+                        <th>Max Marks</th>
+                        <th>Marks Obtained</th>
+                        <th>Grade</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Data Structures</td>
+                        <td>100</td>
+                        <td>85</td>
+                        <td>A</td>
+                    </tr>
+                    <tr>
+                        <td>Database Management</td>
+                        <td>100</td>
+                        <td>78</td>
+                        <td>B+</td>
+                    </tr>
+                    <tr>
+                        <td>Computer Networks</td>
+                        <td>100</td>
+                        <td>91</td>
+                        <td>A+</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="report-card">
+            <h3>Remarks</h3>
+            <p>Excellent performance overall. Keep up the great work!</p>
+        </div>
+    </div>
+
 </body>
 </html>
