--- a/Admin/results.html
+++ b/Admin/results.html
@@ -1,13 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Results Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Results</title>
+    <link rel="stylesheet" href="results.css">
 </head>
 <body>
-  <center>
-    <h1>Results Page</h1>
-  </center>
+
+    <div class="container">
+        <h1>Results Summary</h1>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Course</th>
+                    <th>Highest Score</th>
+                    <th>Grade</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Java</td>
+                    <td>98</td>
+                    <td>A+</td>
+                </tr>
+                <tr>
+                    <td>DAA</td>
+                    <td>95</td>
+                    <td>A</td>
+                </tr>
+                <tr>
+                    <td>AI & ML</td>
+                    <td>99</td>
+                    <td>A+</td>
+                </tr>
+                <tr>
+                    <td>Frontend</td>
+                    <td>96</td>
+                    <td>A</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
 </body>
 </html>
