--- a/Faculty/profile.html
+++ b/Faculty/profile.html
@@ -3,44 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Profile Page</title>
+  <title>Faculty Profile</title>
+  <link rel="stylesheet" href="faculty_profile.css">
 </head>
 <body>
-  
-    <h2>
-       Faculty Profile
-    </h2>
-  
-  <table>
+
+  <h2 class="page-title">Faculty Profile</h2>
+
+  <div class="profile-card">
+    <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="Faculty Photo" class="profile-img">
+    <ul class="profile-links">
+      <li><a href="view_courses.html">My courses</a></li>
+      <li><a href="view_students.html">Student list</a></li>
+      <li><a href="post_marks.html">Update Result</a></li>
+    </ul>
+  </div>
+
+  <h2 class="details-title">Faculty Details</h2>
+  <table class="details-table">
     <tr>
-      <td><img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png"  height="157" width="157"></td>
-      <td><p>This is your faculty space. <br>View courses and manage student results.</p></td>
+      <th>Name</th>
+      <td>Harshitha</td>
     </tr>
     <tr>
-      <td>
-        <ul>
-          <li><a href="view_courses.html">My courses</a></li>
-          <li><a href="view_students.html">Student list</a></li>
-          <li><a href="post_marks.html">Update Result</a></li>
-        </ul>
-      </td>
+      <th>Email</th>
+      <td><a href="mailto:Harshitha@gmail.com">Harshitha@gmail.com</a></td>
     </tr>
   </table>
-  <hr>
-  <h2>Faculty Details</h2>
-
-  <table border="1" cellpadding="10">
-<tr>
-  <td><b>Name</b></td>
-  <td>Harshitha</td>
-</tr>
-<tr>
-  <td><b>Email</b></td>
-  <td><u>Harshitha@gmail.com</u></td>
-</tr>
-
-</table>
-
 
 </body>
 </html>
