--- a/Faculty/view_courses.html
+++ b/Faculty/view_courses.html
@@ -3,14 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Courses</title>
+  <title>Course Overview - Faculty</title>
+  <link rel="stylesheet" href="course_overview.css">
 </head>
 <body>
-  <center>
-    <h2>Course Overview</h2>
-  </center>
-  <h2>Available Courses</h2>
-<p>Explore the wide range of academic and skill-based courses offered by our institution. Click on each course to know more about its syllabus, duration, and faculty.</p>
+
+  <h2>Course Overview</h2>
+
+  <div class="course-container">
+    <div class="course-card">
+      <h3>Java Programming</h3>
+      <p>Learn the fundamentals of Java including OOP concepts, file handling, and multithreading.</p>
+      <a href="#">View Details</a>
+    </div>
+
+    <div class="course-card">
+      <h3>Database Management Systems</h3>
+      <p>Understand database design, SQL queries, normalization, and transactions in DBMS.</p>
+      <a href="#">View Details</a>
+    </div>
+
+    <div class="course-card">
+      <h3>Web Development</h3>
+      <p>Master HTML, CSS, and JavaScript for building responsive, user-friendly websites.</p>
+      <a href="#">View Details</a>
+    </div>
+  </div>
 
 </body>
 </html>
