--- a/Student/view_results.html
+++ b/Student/view_results.html
@@ -1,15 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Results</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>View Results - Student</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #FFE8DC;
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            max-width: 900px;
+            margin: 50px auto;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+        }
+
+        h2 {
+            text-align: center;
+            color: #333;
+            margin-bottom: 20px;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 15px;
+        }
+
+        th {
+            background-color: #FFBC9A;
+            color: #333;
+            padding: 10px;
+            text-align: left;
+        }
+
+        td {
+            padding: 10px;
+            border-bottom: 1px solid #ddd;
+        }
+
+        tr:hover {
+            background-color: #f5f5f5;
+        }
+
+        .status-pass {
+            color: green;
+            font-weight: bold;
+        }
+
+        .status-fail {
+            color: red;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-  <center>
-    <h1>
-      View  Results
-    </h1>
-  </center>
+
+    <div class="container">
+        <h2>View Results</h2>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Subject</th>
+                    <th>Marks Obtained</th>
+                    <th>Grade</th>
+                    <th>Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Mathematics</td>
+                    <td>85</td>
+                    <td>A</td>
+                    <td class="status-pass">Pass</td>
+                </tr>
+                <tr>
+                    <td>Physics</td>
+                    <td>72</td>
+                    <td>B+</td>
+                    <td class="status-pass">Pass</td>
+                </tr>
+                <tr>
+                    <td>Chemistry</td>
+                    <td>48</td>
+                    <td>C</td>
+                    <td class="status-fail">Fail</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
 </body>
 </html>
